# encoder-in-cuda

./: .gitignore  README.md  demo.py  pyproject.toml
benchmarks/: profile.py  validate_against_pytorch.py  visualize_attention.py
encoder/: __init__.py  attention.py  autograd.py  embedding.py  encoder.py  feedforward.py  kernels.py  layernorm.py  positional.py
tests/: test_autograd.py  test_components.py  test_kernels.py
